@@ -1,0 +1,4 @@
+" Redline Smalltalk, Copyright (c) James C. Ladd. All rights reserved. See LICENSE in the root of this distribution "
+
+Object < #BlockClosure
+
